# a30

./: pyproject.toml  requirements.txt
eink_dashboard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
eink_dashboard/cli/: console_utils.py  main.py
eink_dashboard/cli/commands/: carousel.py  device.py  generate.py  pull.py  push.py  watch.py
eink_dashboard/config/: __init__.py  device_manager.py  parser.py
eink_dashboard/datasources/: __init__.py  base.py  prometheus.py  script.py
eink_dashboard/device/: __init__.py  renderer.py  server.py
eink_dashboard/utils/: __init__.py  console.py
eink_dashboard/widgets/: __init__.py  base.py  line_chart.py  progress.py  text.py
examples/: carousel_dashboard.yaml  dashboard.yaml  devices.yaml
scripts/: device_server.py  install_systemd.sh
scripts/systemd/: eink-dashboard.service  eink-watch@.service
